--- a/contact.html
+++ b/contact.html
@@ -108,8 +108,8 @@ h1 {
 
         <div class="contact-item">
             <h4>GitHub</h4>
-            <a href="https://github.com/yourusername" target="_blank">
-                github.com/yourusername
+            <a href="https://github.com/Sam-Aga" target="_blank">
+                github.com/Sam-Aga
             </a>
         </div>
 
@@ -124,3 +124,4 @@ h1 {
 
 </body>
 </html>
+
