--- a/contact.html
+++ b/contact.html
@@ -8,97 +8,110 @@
 
 <style>
 * {
-    font-family: "Inter", sans-serif;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 body {
-    background: linear-gradient(180deg, #eef3f7, #f9fbfc);
     margin: 0;
-    padding: 60px 20px;
-    color: #333;
+    min-height: 100vh;
+    background: #f3f6fb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 20px;
 }
 
-/* Contact card */
-.card {
-    max-width: 650px;
-    margin: auto;
-    background-color: white;
-    padding: 45px;
-    border-radius: 10px;
-    position: relative;
-    box-shadow: 0 12px 30px rgba(0,0,0,0.1);
+/* Card */
+.container {
+    max-width: 720px;
+    width: 100%;
+    background-color: #ffffff;
+    padding: 56px;
+    border-radius: 20px;
+    box-shadow: 0 30px 60px rgba(0,0,0,0.12);
 }
 
-/* Accent bar */
-.card::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 8px;
-    height: 100%;
-    background: linear-gradient(180deg, #2fa4a9, #1e3c72);
-    border-radius: 10px 0 0 10px;
-}
-
+/* Title */
 h1 {
-    color: #1e3c72;
-    margin-top: 0;
-    margin-bottom: 10px;
+    margin: 0;
+    font-size: 36px;
+    font-weight: 600;
+    color: #1f2933;
 }
 
+/* Subtitle */
 .subtitle {
-    font-size: 15px;
-    color: #555;
-    margin-bottom: 35px;
+    margin-top: 10px;
+    font-size: 17px;
+    color: #6b7280;
+    max-width: 500px;
 }
 
-/* Contact grid */
-.contact-grid {
+/* Divider */
+.divider {
+    height: 3px;
+    width: 70px;
+    background-color: #2563eb;
+    border-radius: 3px;
+    margin: 32px 0 40px 0;
+}
+
+/* Contact list */
+.contact-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 25px;
+    grid-template-columns: 1fr;
+    gap: 28px;
 }
 
-/* Individual contact items */
+/* Contact item */
 .contact-item {
-    background-color: #f4f8fb;
-    border-left: 4px solid #2fa4a9;
-    padding: 18px;
-    border-radius: 6px;
+    padding: 26px 28px;
+    border-radius: 16px;
+    background-color: #f9fafb;
 }
 
+/* Labels */
 .contact-item h4 {
     margin: 0 0 8px 0;
-    font-size: 14px;
-    color: #1e3c72;
+    font-size: 13px;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    color: #2563eb;
 }
 
+/* Links */
 .contact-item a {
-    color: #1e3c72;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 17px;
+    color: #111827;
     word-break: break-word;
 }
 
-.contact-item a:hover {
-    text-decoration: underline;
+/* Responsive */
+@media (max-width: 600px) {
+    .container {
+        padding: 36px;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<div class="container">
     <h1>Contact</h1>
-    <div class="subtitle">
-        Feel free to reach out using any of the methods below.
-    </div>
+    <p class="subtitle">
+        You can reach out to me through the following platforms.
+    </p>
 
-    <div class="contact-grid">
+    <div class="divider"></div>
+
+    <div class="contact-list">
         <div class="contact-item">
             <h4>Email</h4>
             <a href="mailto:samarth.agarwal2024@vitstudent.ac.in">
@@ -124,4 +137,3 @@ h1 {
 
 </body>
 </html>
-
